Changes from Version 0.15-7 to 0.15-8 [1-Nov-2011]

* Fixed issue where degree.min was set > 1 but initial degree was 1
  (corresponding to the linear model which is the default for the
  initial degree otherwise)

* Added the option to treat the continuous bandwidths as discrete with
  lambda.discrete.num+1 values in the range [0,1] which can be more
  computationally efficient when a `quick and dirty' solution is
  sufficient rather than conducting mixed integer search treating the
  lambda as real-valued

* Corrected incorrect warning about using basis="auto" when there was
  only one continuous predictor

Changes from Version 0.15-6 to 0.15-7 [24-Oct-2011]

* Added logical model.return to crs (default model.return=FALSE) which
  previously returned a list of models corresponding to each unique
  combination of the categorical predictors when kernel=TRUE (the
  memory footprint could be potentially very large so this allows the
  user to generate this list if so needed)

Changes from Version 0.15-5 to 0.15-6 [17-Oct-2011]

* Compiler error thrown on some systems due to changes in
  Eval_Point.hpp corrected

Changes from Version 0.15-4 to 0.15-5 [16-Oct-2011]

* Thanks to Professor Brian Ripley, additional Solaris C/C++ compiler
  warnings/issues have been resolved

* Some internal changes for soon to be deprecated functionality
  (sd(<matrix>) expected to be deprecated shortly)

Changes from Version 0.15-3 to 0.15-4 [15-Oct-2011]

* Extended the gsl.bs functionality to permit out-of-sample prediction
  of the spline basis and its derivatives

* Added option knots="auto" to automatically determine via
  cross-validation whether to use quantile or uniform knots

* Minor changes to help page examples and descriptions and to the crs
  vignette

Changes from Version 0.15-2 to 0.15-3 [05-Sep-2011]

* Fixed glitch when all degrees are zero when computing the
  cross-validation function (also fixes glitch when all degrees are
  zero when plotting the partial surfaces)
